<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-9332929961258846/5655147414</string>

    <string name="city_weather">City to get weather for</string>
    <string name="tempUnit">What is your preferred unit</string>
    <string name="listenOnStart">Listen on start</string>
    <string name="pickLang">Pick language</string>
    <string name="notification">Run in background</string>
    <string name="AppVersion">App Version</string>
    <string name="weatherError">Weather Error</string>
    <string name="answerAfterSpeak">Answer me after i speak</string>
    <string name="greetMeOnStart">Greet me on start</string>
    <string name="learn_from_you">Allow Assist-Me to learn from you</string>
    <string name="phoneNumber">Phone number(optional)</string>
    <string name="email">Email (optional)</string>
    <string name="name">Name</string>
    <string name="sports_toggle_init_card">Sports information (soon)</string>
    <string name="favorite_apps_toggle_init_card">List of your favorite apps</string>
    <string name="weather_info_card_init_toggle">Weather information</string>
    <string name="init_card_two_title">"Check the items you want to get information for. \n Don't worry you can change it later."</string>
    <string name="city_weather_title">Type the city name you would like to get weather information for</string>
    <string name="card_init_title">Welcome to your cards screen.\n You will be asked some question so we can serve you better.\n click continue</string>
    <string name="reset_to_default">Default</string>
    <string name="choose_color">Pick color</string>
    <string name="Continue">Continue</string>
    <string name="instructions_go">Go through instructions</string>
    <string name="assist_me_is_ready">Assist-Me is ready</string>
    <style name="card">Enable Card</style>
    <string name="text">Text Input</string>
    <string name="app_name">Assist-Me</string>
    <string name="select">Pick language</string>
    <string name="edit">Type Here</string>
    <string name="preferences">SETTINGS</string>
    <string name="features">FEATURES</string>
    <string name="alpha">Be An Alpha Tester</string>
    <string name="about">About</string>
    <string name="appsettings">APPLICATION SETTINGS</string>
    <string name="colorful">Siri Look Alike</string>
    <string name="immersive">Immersive Mode</string>
    <string name="themes">Themes</string>
    <string name="lang">Language</string>
    <string name="assistsettings">ASSISTANT SETTINGS</string>
    <string name="onstart"> On start greeting</string>
    <string name="answer">Answer after speak</string>
    <string name="assistname">Assistant Name</string>
    <string name="yourname">Your name</string>
    <string name="image">Pick Image</string>
    <string name="bitch">Bitch mode</string>
    <string name="advanced">ADVANCED SETTINGS</string>
    <string name="widget_settings">Widget settings</string>
    <string name="text_size">Text size</string>
    <string name="text_input">Text input</string>
    <string name="edittext">Type Here</string>
    <string name="answerinnewacitivty">Answer in new activity</string>
    <string name="listenonstart">Listen on start</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="publisherID">ca-app-pub-9332929961258846/4938527814</string>
    <string name="admin_app">Assist-Me</string>
    <string name="admin_app_description">Assist-Me</string>
    <string name="pick">Pick Language</string>

    <string-array name="language">
        <item>English</item>
        <item>Hebrew</item>
    </string-array>

    <string-array name="language_values">
        <item>english</item>
        <item>hebrew</item>
    </string-array>

    <string-array name="unknown">
        <item>Nothing</item>
        <item>Wolfram Alpha it</item>
        <item>Google it</item>
        <item>Ask the developer to add this</item>
    </string-array>

    <string-array name="unknown_values">
        <item>Nothing</item>
        <item>Wolfram</item>
        <item>Google</item>
        <item>Feedback</item>
    </string-array>

    <string-array name="unit">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="unit_values">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="accent">
        <item>US</item>
        <item>UK</item>
    </string-array>

    <string-array name="accent_values">
        <item>US</item>
        <item>UK</item>
    </string-array>

</resources>
