<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/app_def"

    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/init_card_two_title"
        android:id="@+id/day"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="51dp" />

    <com.RippleButton.SmartButton
        android:textColor="@color/black"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:background="@color/white"
        android:id="@+id/puthandhere"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/puthandhere"
        android:gravity="center_vertical"
        android:id="@+id/container"
        android:layout_below="@+id/day">

        <CheckBox
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_info_card_init_toggle"
            android:id="@+id/radioButton"
            android:textSize="22dp"
            android:checked="true" />

        <CheckBox
            android:textColor="@color/white"
            android:layout_marginBottom="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_apps_toggle_init_card"
            android:id="@+id/radioButton2"
            android:textSize="22dp"
            android:checked="true" />

        <CheckBox
            android:textColor="@color/white"
            android:layout_marginBottom="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_toggle_init_card"
            android:enabled="false"
            android:id="@+id/radioButton3"
            android:textSize="22dp"
            android:checked="false" />

    </RadioGroup>
</RelativeLayout>