<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/hand"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/high_res"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"/>
    <com.RippleButton.SmartButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:id="@+id/continue_first_screen"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:layout_marginBottom="37dp" android:background="@color/app_def" android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

    <LinearLayout
        android:layout_above="@+id/continue_first_screen"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hand"
        android:id="@+id/container"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="44dp">

        <CheckBox
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/learn_from_you"
            android:id="@+id/learn"
            android:checked="true"
            android:layout_marginBottom="10dp" />

        <CheckBox
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/greetMeOnStart"
            android:id="@+id/on_start_greeting"
            android:layout_marginBottom="15dp" />

        <CheckBox
            android:checked="true"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/answerAfterSpeak"
            android:id="@+id/answer" />
    </LinearLayout>

</RelativeLayout>