<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/hand"
            android:layout_marginBottom="40dp"
            android:background="@drawable/high_res"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    <TextView
            android:layout_below="@+id/hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/day"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp" android:textSize="30dp" android:textColor="#ff434343"
            android:layout_above="@id/continue_first_screen" />

    <com.RippleButton.SmartButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:layout_marginTop="40dp"
            android:id="@+id/continue_first_screen" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:layout_marginBottom="37dp" android:background="@color/app_def" android:paddingLeft="30dp"
            android:paddingRight="30dp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:prompt="@string/pick"
        android:layout_height="wrap_content"
        android:id="@+id/desc"
        android:entries="@array/language"
        android:layout_above="@+id/continue_first_screen"
        android:layout_alignLeft="@+id/day"
        android:layout_alignRight="@+id/day"/>

</RelativeLayout>